TRAC-5630 workspace button alignment issue fix

--- a/src/app/components/views/composer/composer.component.scss
+++ b/src/app/components/views/composer/composer.component.scss
@@ -112,7 +112,7 @@
   display: flex;
   flex-direction: row;
   position: absolute;
-  bottom: 10px;
+  bottom: 1px;
   right: 40px;
 }
 
